# blog_vlfeat

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: FindOpenImageIO.cmake
flagfiles/: sift_test_flags.txt
src/: sift_test.cc
